<resources>
    <string name="app_name">UI Design</string>
    <string name="check_balance">Check Balance</string>
    <string name="number">0123456789</string>
    <string name="name">Mofizur Rahman</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="address">Address</string>
    <string name="refund_settlement">Refund Settlement</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy</string>
</resources>